--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,10 +1,10 @@
-.form{
+.form {
     width: 30%;
     padding-top: 15vh;
     box-sizing: border-box;
 }
 
-.form-header{
+.formHeader {
     background-color: #F00000;
     color: white;
     text-align: center;
@@ -14,7 +14,7 @@
     border-radius: 5px;
 }
 
-.form-body{
+.formBody {
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -25,17 +25,17 @@
     border-radius: 5px;
 }
 
-.form-body input{
+.formBody input {
     padding: 12px 20px;
     margin: 10px;
 }
 
-
-.form-select{
-    padding: 0px 10px; 
+.formSelect {
+    padding: 12px 20px;
+    margin: 10px;
 }
 
-.form-button{
+.formButton {
     margin: 10px;
     background: #B5B5B5;
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.46);
@@ -46,7 +46,7 @@
     font-weight: 700;
 }
 
-.form-button-active{
+.formButtonActive {
     margin: 10px;
     background: #37CC8A;
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.46);
@@ -55,12 +55,37 @@
     border: none;
     color: white;
     font-weight: 700;
+    cursor: pointer;
 }
 
+.skills {
+    margin: 0 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
 
-.disclaimer{
+.skillTag {
+    display: flex;
+    gap: 5px;
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 99.19%;
+    letter-spacing: 0.01em;
+    color: #777777;
+    padding: 2px 10px;
+    background: #DCDCDC;
+    border-radius: 8px;
+}
+
+.skillTag span {
+    cursor: pointer;
+}
+
+.disclaimer {
     font-weight: 500;
     font-size: 12px;
     text-align: center;
-    color: #C2C2C2;;
+    color: #C2C2C2;
+    ;
 }
